<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Genomizer 2.0</string>
    
	
    <!-- Shared preferences selected files -->
    <string name="rawFiles">rawFiles</string>
    <string name="profileFiles">profileFiles</string>
    <string name="regionFiles">regionFiles</string>
    <string name="FILE_IDS">GenomizerFileIds</string>
    
    <!--  Bundle keys for annotations between search result and its settings -->
    <string name="annotationsKey">annotationsKey</string>
    <string name="visibleAnnotationsKey">visibleAnnotationstestKey</string>
    <string name="annotationSortByKey">annotationSortByKey</string>
    
    <!-- Toast messages -->
    <string name="msg_no_internet_availiable">Internet seems to be disconnected</string>
    <string name="msg_http_response_204">No content</string>
    <string name="msg_http_response_400">Bad request</string>
    <string name="msg_http_response_401">Invalid username or password</string>
    <string name="msg_http_response_403">Access denied</string>
    <string name="msg_http_response_404">Resource not found</string>
    <string name="msg_http_response_405">Method not allowed</string>
    <string name="msg_http_response_429">Too many requests.\nPlease try again later.</string>
    <string name="msg_http_response_503">Service unavailiable</string>
    <string name="msg_an_error_occurred">An error occurred</string>
    <string name="msg_no_connection_with_server">Could not connect to server</string>
           
    

    <!-- Used in login_activity -->
    <string name="login_action_settings">Settings</string>
    <string name="login_signIn">Sign in</string>
    <string name="login_username">Username</string>
    <string name="login_enterUsername">Enter username</string>
    <string name="login_password">Password</string>
    <string name="login_enterPassword">••••••</string>
    

    <!-- Used in login_layout_settings -->
    <string name="login_settings_label">Server settings</string>
    <string name="login_settings_selectAServerURL">Select a server URL</string>
    <string name="login_settings_btn_editURL">Edit server URL</string>
    <string name="login_settings_btn_saveURL">Save server URL</string>
    <string name="login_settings_removeURL">Remove server URL</string>
    <string name="login_settings_addURL">Add server URL</string>

    <string-array name="login_settings_serverList">
        <item>http://dumbledore.cs.umu.se:7000/</item>
        <item>http://213.21.21.248:7000/</item>
        <item>http://scratchy.cs.umu.se:60000/</item>
    </string-array>

    <!-- Used in search_layout_regular -->
    <string name="searchRegular_btn_search">Search</string>
    <string name="searchRegular_et_expid">Experiment ID</string>
    
    
    <!-- Used in search_layout_pubmed -->
    <string name="searchPubmed_tv_pubmedStyle">PubMed-style</string>
    <string name="searchPubmed_btn_search">Search</string>
    <string name="searchPubmed_input_field_example">value1[annotation1] AND value2[annotation2]</string>
    

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Search and process</item>
        <item>Selected files</item>
        <item>Active processes</item>
        <item>Logout</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_selected_files</item>
        <item>@drawable/ic_process</item>
        <item>@drawable/ic_logout</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item icon</string>

    <!-- Used in search_layout_experimentList -->
    <string name="search_tv_searchResult">Search result</string>
    
    <!-- Used in selectedfiles_layout_profile -->
    <string name="selectedfilesProfile_btn_removeMarkedFiles">Remove marked files</string>
    
    <!-- Used in selectedfiles_layout_raw -->
    <string name="selectedfilesRaw_btn_convertToProfile">Convert to profile</string>
    <string name="selectedfilesRaw_btn_removeMarkedFiles">Remove marked files</string>
    
     <!-- Used in selectedfiles_layout_region -->
    <string name="selectedfilesRegion_btn_removeMarkedFiles">Remove marked files</string>

    <!-- Used in search_layout_experimentfiles -->
    <string name="search_tv_experimentFiles">EXPERIMENT FILES</string>
    <string name="search_tv_rawData">RAW DATA</string>
    <string name="search_tv_profileData">PROFILE DATA</string>
    <string name="search_tv_regionData">REGION DATA</string>
    <string name="search_btn_addToSelection">Add to selection</string>
    
    <!-- Used in processstatus_layout_processlist -->
    <string name="process_btn_refresh">Refresh</string>
    <string name="process_status_tv_experiment">Experiment:</string>
    <string name="process_status_tv_author">Author:</string>
    <string name="process_status_tv_timeadded">Process added:</string>
    <string name="process_status_tv_timestarted">Process started:</string>
    <string name="process_status_tv_timefinished">Process finished:</string>
    <string name="process_status_tv_status">Status:</string>
    
    <!-- Used in search_layout_experimentlistsettings -->
    <string name="search_btn_setVisibleAnnotations">Set visible annotations</string>
    <string name="searchresult_settings_btn_checkAllAnnotations">Check All</string>
    <string name="searchresult_settings_btn_uncheckAllAnnotations">Uncheck All</string>
    <string name="search_tv_sortBy">Sort by</string>
    
    <!-- Used in process_layout_all_parameters -->
    <string name="process_btn_process">Process</string>
    
    <!-- Used in process_layout_bowtie_list_element -->
    <string name="process_tv_input_file">Input file</string>
    <string name="process_tv_output_file">Output file</string>
    <string name="process_tv_genomeRelease">Genome release       </string>
    <string name="process_btn_parameters">Parameters</string>
    <string name="process_tv_keepsam">Keep sam</string>
    
    <!-- Used in process_menu -->
    <string name="process_action_add">Add</string>
    
    <string name="bowtie_parameters">-a -m 1 --best -p 10 -v 2 -q -S</string>
    
    
    
    
</resources>
