<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/genomizer_white" >
	
		<RelativeLayout 
	    	android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:paddingBottom="@dimen/activity_vertical_margin"
    		android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin">
	
	    <TextView
	        android:id="@+id/search_tv_pubmedStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"
	        android:layout_alignParentTop="true"
	        android:text="@string/searchPubmed_tv_pubmedStyle"
	        android:textAppearance="?android:attr/textAppearanceSmall"/>
	    
	    <EditText 
	        android:id="@+id/search_pubmed_input_field"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="4dp"        
	        android:inputType="textMultiLine"
	        android:hint="@string/searchPubmed_input_field_example"
            android:textColorHint="@color/gray_login"
	        android:layout_below="@id/search_tv_pubmedStyle" />
	   

	    
	</RelativeLayout>
	  <Button
       android:id="@+id/search_pubmed_btn_search"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/genomizer_blue" 
       android:text="@string/searchPubmed_btn_search"
       android:layout_alignParentBottom="true" />
		
</RelativeLayout>