<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="se.umu.cs.pvt151.FileListActivity$PlaceholderFragment" >
    
     <TextView
        android:id="@+id/textFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
		android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/search_tv_experimentFiles"        
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"        
        android:textStyle="bold" />
     

     
     <TextView
        android:id="@+id/textRaw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textFiles"
        android:background="@color/light_gray_experimentFiles"
        android:text="@string/search_tv_rawData"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_above="@+id/textProfile"
        android:layout_below="@id/textRaw"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/smoke_white"
        android:choiceMode="multipleChoice"
        android:dividerHeight="1dp" >

    </ListView>

    <TextView
        android:id="@+id/textRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView3"
        android:layout_alignParentLeft="true"
        android:background="@color/light_gray_experimentFiles"
        android:text="@string/search_tv_regionData"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"  />

    <ListView
        android:id="@+id/listView3"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_above="@+id/sendBtn"
        android:layout_alignParentLeft="true"
        android:background="@color/smoke_white"
        android:dividerHeight="1dp"
        android:choiceMode="multipleChoice" >
    </ListView>

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"                
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/search_btn_addToSelection" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:layout_above="@+id/textRegion"
        android:layout_alignParentLeft="true"
        android:background="@color/smoke_white"
        android:choiceMode="multipleChoice"
        android:dividerHeight="1dp" >

    </ListView>

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView2"
        android:layout_alignParentLeft="true"        
        android:background="@color/light_gray_experimentFiles"
        android:text="@string/search_tv_profileData"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

</RelativeLayout>